# sintax

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
src/sintax/: __init__.py
src/sintax/formats/: criterion.py  googlebenchmark.py
tests/: conftest.py  test_criterion.py  test_googlebenchmark.py  test_sintax.py
tests/fixtures/: criterion.csv  google_benchmark.csv  google_benchmark.json  invalid_criterion.csv  valid_criterion.csv
tests/fixtures/criterion/Fibonacci/Iterative/20/base/: raw.csv
tests/fixtures/criterion/Fibonacci/Iterative/21/base/: raw.csv
tests/fixtures/criterion/Fibonacci/Recursive/20/base/: raw.csv
tests/fixtures/criterion/Fibonacci/Recursive/21/new/: raw.csv
