[metadata]
name = sintax
version = 0.0.1
description = Adapts Rust Criterion.rs CSV files to Google's Benchmark JSON format
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = ISC License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
url = https://github.com/theasylum/sintax
author = Bert JW Regeer
author_email = bertjw@regeer.org
python_requires='>=3.6'

[options]
package_dir=
    =src
packages=find:
install_requires =

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
    pytest-cov
    coverage

[bdist_wheel]
universal=1

[tool:pytest]
python_files = test_*.py
testpaths =
    tests
addopts = -W always --cov --cov-report=term-missing
